8233270: Add support to jtreg helpers to unpack packages 8230933: Default icon is not set for additional launchers
Reviewed-by: herrick, prr, almatvee